RESOLVED FIXED159390
[JSC] __lookupGetter__ and __lookupSetter__ should not ignore exceptions
https://bugs.webkit.org/show_bug.cgi?id=159390
Summary [JSC] __lookupGetter__ and __lookupSetter__ should not ignore exceptions
Benjamin Poulain
Reported 2016-07-03 15:30:11 PDT
[JSC] __lookupGetter__ and __lookupSetter__ should not ignore exceptions
Attachments
Patch (7.99 KB, patch)
2016-07-03 15:31 PDT, Benjamin Poulain
no flags
Archive of layout-test-results from ews100 for mac-yosemite (785.11 KB, application/zip)
2016-07-03 16:19 PDT, Build Bot
no flags
Archive of layout-test-results from ews105 for mac-yosemite-wk2 (768.38 KB, application/zip)
2016-07-03 16:21 PDT, Build Bot
no flags
Archive of layout-test-results from ews114 for mac-yosemite (1.41 MB, application/zip)
2016-07-03 16:27 PDT, Build Bot
no flags
Archive of layout-test-results from ews124 for ios-simulator-wk2 (632.29 KB, application/zip)
2016-07-03 16:27 PDT, Build Bot
no flags
Patch (7.84 KB, patch)
2016-07-03 19:02 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2016-07-03 15:31:57 PDT
Mark Lam
Comment 2 2016-07-03 15:45:24 PDT
Comment on attachment 282668 [details] Patch r=me
Mark Lam
Comment 3 2016-07-03 15:50:36 PDT
Comment on attachment 282668 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=282668&action=review > LayoutTests/js/script-tests/property-getters-and-setters.js:127 > +debug("__lookupGetter__ can be interupted by a proxy throwing an exception"); typo: /interupted/interrupted/ > LayoutTests/js/script-tests/property-getters-and-setters.js:142 > +debug("__lookupSetter__ can be interupted by a proxy throwing an exception"); typo: /interupted/interrupted/
Build Bot
Comment 4 2016-07-03 16:19:21 PDT
Comment on attachment 282668 [details] Patch Attachment 282668 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1621108 New failing tests: js/property-getters-and-setters.html
Build Bot
Comment 5 2016-07-03 16:19:25 PDT
Created attachment 282669 [details] Archive of layout-test-results from ews100 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 6 2016-07-03 16:21:33 PDT
Comment on attachment 282668 [details] Patch Attachment 282668 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/1621111 New failing tests: js/property-getters-and-setters.html
Build Bot
Comment 7 2016-07-03 16:21:37 PDT
Created attachment 282670 [details] Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 8 2016-07-03 16:27:17 PDT
Comment on attachment 282668 [details] Patch Attachment 282668 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1621112 New failing tests: js/property-getters-and-setters.html
Build Bot
Comment 9 2016-07-03 16:27:20 PDT
Created attachment 282671 [details] Archive of layout-test-results from ews114 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 10 2016-07-03 16:27:53 PDT
Comment on attachment 282668 [details] Patch Attachment 282668 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1621113 New failing tests: js/property-getters-and-setters.html
Build Bot
Comment 11 2016-07-03 16:27:56 PDT
Created attachment 282672 [details] Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Benjamin Poulain
Comment 12 2016-07-03 19:02:19 PDT
WebKit Commit Bot
Comment 13 2016-07-03 20:25:37 PDT
Comment on attachment 282673 [details] Patch Clearing flags on attachment: 282673 Committed r202796: <http://trac.webkit.org/changeset/202796>
WebKit Commit Bot
Comment 14 2016-07-03 20:25:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.