[JSC] __lookupGetter__ and __lookupSetter__ should not ignore exceptions https://bugs.webkit.org/show_bug.cgi?id=159390

Patch by Benjamin Poulain <bpoulain@apple.com> on 2016-07-03
Reviewed by Mark Lam.

Source/JavaScriptCore:

See:
-https://tc39.github.io/ecma262/#sec-object.prototype.__lookupGetter__
-https://tc39.github.io/ecma262/#sec-object.prototype.__lookupSetter__

They are both supposed to be regular [[GetOwnProperty]].

* runtime/ObjectPrototype.cpp:
(JSC::objectProtoFuncLookupGetter):
(JSC::objectProtoFuncLookupSetter):

LayoutTests:

* js/property-getters-and-setters-expected.txt:
* js/script-tests/property-getters-and-setters.js:
(getter17):
(get getter17):
(getOwnPropertyDescriptor):
(setter18):
(set setter18):

Canonical link: https://commits.webkit.org/177527@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202796 268f45cc-cd09-0410-ab3c-d52691b4dbfc